WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281471
Fix incorrect macro ordering in RemoteGraphicsContextGL
https://bugs.webkit.org/show_bug.cgi?id=281471
Summary
Fix incorrect macro ordering in RemoteGraphicsContextGL
Ross Kirsling
Reported
2024-10-14 20:45:12 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2024-10-14 20:48:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35195
EWS
Comment 2
2024-10-14 20:50:35 PDT
Committed
285173@main
(6f3958078323): <
https://commits.webkit.org/285173@main
> Reviewed commits have been landed. Closing PR #35195 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-14 20:51:13 PDT
<
rdar://problem/137930547
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug