Fix incorrect macro ordering in RemoteGraphicsContextGL https://bugs.webkit.org/show_bug.cgi?id=281471

Unreviewed -Werror build fix.

* Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGL.cpp:
WTF_ALLOW_UNSAFE_BUFFER_USAGE_BEGIN occurs inside the #if that guards the whole file, so
WTF_ALLOW_UNSAFE_BUFFER_USAGE_END must also occur prior to the corresponding #endif.

Canonical link: https://commits.webkit.org/285173@main